--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -41,6 +41,15 @@ html {
   letter-spacing: .3px;
 }
 
+@font-face {
+  font-family: 'Font Awesome 6 Duotone';
+  src: url('/webfonts/fa-duotone-900.woff2') format('woff2'); /* Tanpa '/public' */
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+
 @layer utilities {
   .toggle {
     @apply top-5 rounded-lg fixed cursor-pointer h-10 w-fit px-3 bg-container text-text border border-stroke flex justify-center items-center z-10 transition-all duration-300 ease-in-out;
@@ -67,7 +76,7 @@ html {
   }
 
   .form-input {
-    @apply absolute top-0 left-0 w-full h-full border border-slate-400 dark:border-stroke bg-background text-text rounded-xl p-6 z-[1] focus:outline outline-slate-400 dark:focus:outline-slate-500    ;
+    @apply absolute top-0 left-0 w-full h-full border border-slate-400 dark:border-stroke bg-background text-text rounded-xl p-6 z-[1] focus:outline outline-slate-400 dark:focus:outline-slate-500;
   }
 
   .form-label {
